[package]
name = "sht31"
description = "A library for the SHT31 temperature and humidity sensor"
version = "0.3.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/FloppyDisck/SHT31-rs"
readme = "README.md"
keywords = ["embedded", "sensor", "temperature", "humidity"]
categories = ["embedded"]

[features]
thiserror = ["dep:thiserror"]
serde = ["dep:serde"]
# derive's MaxSize on Error enum
postcard = ["dep:postcard"]

[dependencies]
embedded-hal-async = "1.0.0"

crc = "3.0.0"
thiserror = { version = "1.0.38", optional = true }
serde = { version = "1.0", features = ["derive"], default-features = false, optional = true }
postcard = { version = "1.0.8", features = ["experimental-derive"], optional = true }
defmt = "0.3.6"
